--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,47 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Aone_project</string>
+    <string name="app_name">Student Manager</string>
+
+    <!-- Login Screen -->
+    <string name="login_title">Welcome Back!</string>
+    <string name="login_subtitle">Sign in to continue</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="remember_me">Remember me</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="login_button">Login</string>
+    <string name="demo_credentials">Demo Credentials</string>
+
+    <!-- Dashboard -->
+    <string name="total_students">Total Students</string>
+    <string name="active_classes">Active Classes</string>
+    <string name="recent_additions">Recent Additions</string>
+
+    <!-- Student List -->
+    <string name="no_students">No students found</string>
+    <string name="add_first_student">Add your first student</string>
+    <string name="search_students">Search students...</string>
+
+    <!-- Add/Edit Student -->
+    <string name="add_student">Add Student</string>
+    <string name="edit_student">Edit Student</string>
+    <string name="student_name">Student Name</string>
+    <string name="class_name">Class</string>
+    <string name="roll_number">Roll Number</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="save_button">Save</string>
+    <string name="cancel_button">Cancel</string>
+
+    <!-- Messages -->
+    <string name="student_added_success">Student added successfully!</string>
+    <string name="student_updated_success">Student updated successfully!</string>
+    <string name="student_deleted_success">Student deleted successfully!</string>
+    <string name="error_occurred">An error occurred</string>
+    <string name="invalid_input">Please fill all fields correctly</string>
+
+    <!-- Delete Dialog -->
+    <string name="delete_student_title">Delete Student?</string>
+    <string name="delete_student_message">Are you sure you want to delete this student? This action cannot be undone.</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
 </resources>
